--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,7 +5,8 @@
 
     <!-- SearchBox -->
     <shared-search-box
-      (onValue)="searchByCapital($event)"
+      (onDebounce)="searchByCapital($event)"
+      [initialValue]="initialValue"
       [placeholder]="'Buscar por capital...'"
     ></shared-search-box>
 
@@ -15,6 +16,10 @@
 <div class="row">
   <div class="col">
     <hr>
+    <shared-loading-spinner
+      *ngIf="isLoading">
+    </shared-loading-spinner>
+
     <countries-table
       [countries]="countries">
     </countries-table>
