--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,13 +1,18 @@
 <h2> Por Región </h2>
+<hr>
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
 
     <!-- SearchBox -->
-    <shared-search-box
-      (onValue)="searchByRegion($event)"
-      [placeholder]="'Buscar por región...'"
-    ></shared-search-box>
+    <button
+      class="btn mx-2 btn-outline-primary"
+      *ngFor="let region of regions"
+      [ngClass]="{ 'btn-outline-primary': region === selectedRegion }"
+      (click)="searchByRegion(region)"
+    >
+      {{ region }}
+    </button>
 
   </div>
 </div>
