--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -42,10 +42,10 @@
     <div class="col">
       <h3>Traducciones</h3>
       <div class="d-flex flex-wrap">
-        <span class="badge bg-primary m-1"> {{ country.translations['spa']?.common }} </span>
-        <span class="badge bg-primary m-1"> {{ country.translations['ara']?.common }} </span>
-        <span class="badge bg-primary m-1"> {{ country.translations['per']?.common }} </span>
-        <span class="badge bg-primary m-1"> {{ country.translations['ces']?.common }} </span>
+        <span class="badge bg-primary m-1"> {{ country.translations['spa'].common }} </span>
+        <span class="badge bg-primary m-1"> {{ country.translations['ara'].common }} </span>
+        <span class="badge bg-primary m-1"> {{ country.translations['per'].common }} </span>
+        <span class="badge bg-primary m-1"> {{ country.translations['ces'].common }} </span>
       </div>
     </div>
   </div>
